Add some functuanality

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="app_name">Счетовод</string>
     <string name="action_settings">Настройки</string>
+    <string name="addButton">Добавить</string>
 </resources>
